# llmops-rag-application

./: .gitignore  README.md  main.py  pyproject.toml  rag-app.ipynb  requirements.txt  transcript_utils.py
cleaned-transcripts/: AI Pulse   News RoundUp - 6a2d8d8f39b60d45802a2685 (translated on 14-Jun-2026 13-20-05).txt  Orientation Session   Welcome Insiders  - 6a28410e82c2c20b01e95f88 (translated on 10-Jun-2026 10-10-40).txt  YT Sandbox   LLM Evals Session 1 - 6a2c1dfd45e99817670e8f88 (translated on 13-Jun-2026 11-53-46).txt
transcripts/: AI Pulse   News RoundUp - 6a2d8d8f39b60d45802a2685 (translated on 14-Jun-2026 13-20-05).txt  Orientation Session   Welcome Insiders  - 6a28410e82c2c20b01e95f88 (translated on 10-Jun-2026 10-10-40).txt  YT Sandbox   LLM Evals Session 1 - 6a2c1dfd45e99817670e8f88 (translated on 13-Jun-2026 11-53-46).txt
